# Codex-Island

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  设计思路.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-03-codex-island.md  2026-06-04-codex-island-interaction-polish.md
docs/superpowers/specs/: 2026-06-03-codex-island-design.md  2026-06-04-codex-island-interaction-polish-design.md
scripts/: build-windows-sidecar.mjs  bundle-windows-wsl.mjs  codex-island-visual-e2e.ps1
src/: App.tsx  PanelApp.tsx  interactionTimings.ts  main.tsx  sessionData.ts  snapEdge.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: codex_sessions.rs  domain.rs  hook.rs  install.rs  lib.rs  main.rs  paths.rs  startup.rs  state.rs  store.rs  time.rs  tray.rs  watcher.rs  windowing.rs
src-tauri/tests/: capabilities.rs  hook_cli.rs  store_watcher.rs  windowing.rs
src/__tests__/: App.test.tsx  Island.test.tsx  PanelApp.test.tsx
src/components/: Island.tsx  SessionList.tsx  SessionPill.tsx  SetupPanel.tsx  demoSessions.ts  session.ts
src/test/: setup.ts
