[package]
name = "codex-island"
version = "0.1.0"
description = "A desktop status island for Codex sessions"
authors = ["Codex Island"]
edition = "2021"

[lib]
name = "codex_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-island"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
