[package]
name = "codex-island"
version = "0.1.11"
description = "A desktop status island for Codex sessions"
authors = ["Codex Island"]
edition = "2021"
default-run = "codex-island"

[lib]
name = "codex_island_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-island"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
